--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-{% include head.html %}
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>{{ page.title }}</title>
+</head>
 
-<!-- hack iOS CSS :active style -->
-<body ontouchstart="">
-
-    {% include nav.html %}
-
-    {{ content }}
-
-    {% include footer.html %}
-
-
-<!-- Image to hack wechat -->
-<img src="/img/common/icon_wechat.png" width="0" height="0" />
-<!-- Migrate from head to bottom, no longer block render and still work -->
-
+<body>
+{{ content }}
 </body>
 
 </html>
